--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
