--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "js-cookie": "^3.0.5",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
