added Order, Register, Payorder, History and Updateprofile Pages

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGODB_URI =mongodb+srv://fashionhouse:Learning2023@cluster0.mocwjxv.mongodb.net/fashionhouse?retryWrites=true&w=majority
+PAYPAL_CLIENT_ID=AdpC4pciGSXXY_WZVjv7AXq-oMpIVUr_GqdBbPJBmdYndF-kQzCWvf3x_Rv-8K_kQQyouY8MlQdhNojz
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=somethingsecret
+JWT_SECRET=somethingsecret
