--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^1.0.6",
+    "@paypal/react-paypal-js": "^8.1.3",
     "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "install": "^0.13.0",
