Added Admin Dashboard

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ PAYPAL_CLIENT_ID=AdpC4pciGSXXY_WZVjv7AXq-oMpIVUr_GqdBbPJBmdYndF-kQzCWvf3x_Rv-8K_
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=somethingsecret
 JWT_SECRET=somethingsecret
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dxvfabxw8
+NEXT_PUBLIC_CLOUDINARY_API_KEY=616676961334741
+CLOUDINARY_SECRET=z2Jws03xC6dWIb_ge_LaNX9gCGQ
+CLOUDINARY_URL=cloudinary://616676961334741:z2Jws03xC6dWIb_ge_LaNX9gCGQ@dxvfabxw8
