--- a/package.json
+++ b/package.json
@@ -9,20 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^1.0.6",
     "@paypal/react-paypal-js": "^8.1.3",
     "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.0",
+    "cloudinary": "^1.41.0",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "mongoose": "^8.0.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-stars": "^2.2.5",
     "react-toastify": "^9.1.3",
     "tw-elements": "^1.0.0"
   },
